--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 /* Tag selector to select the 'body' element */
 body {
   /* Your code here! */
+  width: 700px;
+  height: 100%;
+  margin: 0%
 }
 
 /* Tag selector to select all 'div' elements. We only have one 'div' in our HTML */
