Automatically backed up by Learn

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
   margin: auto;
   height: 100%;
   font-family: "Helvetica Nue";
-  background: white;
+  background: #00b3e6;
   padding: 30px;
 }
 
