--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ div {
   width: 700px;
   margin: auto;
   height: 100%;
-  font-family: Helvetica Nue;
+  font-family: Helvetica Neue;
   padding: 30px;
 }
 
