--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ div {
   height: 100%;
   font-family: Helvetica Neue;
   padding: 30px;
+  background: white;
 }
 
 /* ID selector to select the element with id 'main-header' */
